Created first release of dockerfile and docs. Removed mysite module. Adjusts to use gunicorn as application server.

--- a/env.example
+++ b/env.example
@@ -6,3 +6,4 @@ AUTH_LDAP_BIND_DN=uid=ldapuser,ou=Users,o=Builtin,dc=example,dc=com
 AUTH_LDAP_BIND_PASSWORD=password_of_ldapuser
 AUTH_LDAP_USER_SEARCH=ou=users,dc=example,dc=com
 AUTH_LDAP_START_TLS=True
+DATABASE_URL=mysql://ideax:ideax@127.0.0.1:3306/ideax
