--- a/env.example
+++ b/env.example
@@ -1,9 +1,10 @@
 # Adjust your settings and rename this file to .env
-SECRET_KEY=your_secret_from_settings.py
-DEBUG=True
+ALLOWED_HOSTS=.localhost, .example.com, ideax
 AUTH_LDAP_SERVER_URI=ldap://ldap.example.com
 AUTH_LDAP_BIND_DN=uid=ldapuser,ou=Users,o=Builtin,dc=example,dc=com
 AUTH_LDAP_BIND_PASSWORD=password_of_ldapuser
 AUTH_LDAP_USER_SEARCH=ou=users,dc=example,dc=com
 AUTH_LDAP_START_TLS=True
 DATABASE_URL=mysql://ideax:ideax@127.0.0.1:3306/ideax
+DEBUG=True
+SECRET_KEY=your_secret_from_settings.py
