add summary field in idea model

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -31,6 +31,12 @@ http {
             add_header Cache-Control public;
         }
 
+        location /media {
+            alias   /var/www/ideax/media;
+            expires max;
+            add_header Cache-Control public;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
